# object_detector

./: README.md  git_push.sh
object_detector_msgs/: CMakeLists.txt  package.xml
object_detector_msgs/msg/: BoundingBox2D.msg  BoundingBox2DArray.msg  BoundingBox3D.msg  BoundingBox3DArray.msg  ObjectPosition.msg  ObjectPositions.msg
point_cloud_object_detector/: CMakeLists.txt  package.xml
point_cloud_object_detector/config/rviz/: roomba1.rviz
point_cloud_object_detector/include/point_cloud_object_detector/: point_cloud_object_detector.h
point_cloud_object_detector/launch/: point_cloud_object_detector.launch  roomba_object_detector.launch  unzipping.launch
point_cloud_object_detector/record/: record.csv
point_cloud_object_detector/src/: bboxes_subscriber.cpp  pcl_subscriber.cpp  point_cloud_object_detector.cpp  point_cloud_object_detector_node.cpp  test_message_filters.cpp
